# stm32play

./: CMakeLists.txt  stm32f103c8_blue_pill.cfg  stm32f103c8tx.cfg  stm32f401ccux.cfg
Core/Src/: main.cpp  stm32f1xx_it.h  syscalls.c  system_stm32f1xx.c
Core/src/: CommandBuffer.cpp  CommandBuffer.h  DataStream.cpp  DataStream.h  GPIO.h  Globals.h  Handlers.cpp  Handlers.h  Print.cpp  Print.h  StringUtils.h  Utils.cpp  Utils.h  main.cpp
Drivers/CMSIS/Include/: cmsis_compiler.h
src/: .clang-format  Base.h  CMakeLists.txt  DataStream.cpp  DeviceCMSIS.h  Globals.cpp  Handlers.cpp  Handlers.h  HeapUsage.h  MicroAssert.cpp  MicroAssert.h  Print.cpp  Print.h  Sleep.cpp  Sleep.h  Statistic.cpp  Statistic.h  StringUtils.h  main.cpp
src/commands/: CMakeLists.txt  CommandBuffer.cpp  CommandExecutor.cpp  CommandExecutor.h  DHT11Command.cpp  DHT11Command.h  PrintCommand.cpp  PrintCommand.h  SHT31Command.cpp  SHT31Command.h
src/core/: Base.h  CMakeLists.txt  Globals.cpp  Globals.h  MicroAssert.h
src/debug/: CMakeLists.txt  Statistic.h
src/driver/: sysmem.c
src/drivers/: CMakeLists.txt  DHT11.cpp  DHT11.h  DHT11Driver.cpp  DHT11Driver.h  LCD1602.cpp  LCD1602.h  LCD1602Driver.cpp  LCD1602Driver.h  SHT31.h  SHT31Driver.cpp  SHT31Driver.h
src/drivers/MQ2/: BaseMQ.cpp  BaseMQ.h  CMakeLists.txt  MQ2.cpp  MQ2.h
src/low_level/: CMakeLists.txt  clock.h  stm32f1xx_it.c  syscalls.c  sysmem.c
src/low_level/f103c8/: CMakeLists.txt  clock.cpp  stm32f1xx_it.c  system_stm32f1xx.c  system_stm32f1xx.cpp
src/low_level/f401xc/: CMakeLists.txt  clock.cpp  stm32f4xx_it.c  stm32f4xx_it.h  system_stm32f4xx.cpp
src/periph/: CMakeLists.txt  EXTI.cpp  EXTI.h  GPIO.cpp  GPIO.h  I2C.cpp  I2C.h  IRQ.cpp  IRQ.h  InterruptsControl.cpp  PeriphBase.h  RCC.cpp  RCC.h  SysTick.cpp  SysTick.h  TIM.cpp  TIM.h  USART.cpp  USART.h
src/periph/device/: CMakeLists.txt  GPIO_STM32F103.cpp  GPIO_STM32F401.cpp
src/utils/: BitUtils.h  CMakeLists.txt  CRC.cpp  CRC.h  DataStream.cpp  FixedBitset.h  HeapUsage.cpp  StringUtils.h
